@@ -11,4 +11,5 @@ EXPORTS
 	NSHandleCommand
 	NSUnloadModule
 	NSGetModuleDescription
+	NSCommandLineExec
 
